deploy/k8s/00-namespace-pvc.example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slack-log
